tests/e2e/semantics/service_arguments.story
http server as api
    when api listen method: "get" path: "/" as r
        r write content: msg
